--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ canvas{
     width: 50vw;
     height: 15vh;
     background-color: gray;
+    pointer-events: none;
     z-index: 2;
 }
 #rightWall{
@@ -32,6 +33,7 @@ canvas{
     width: 15vw;
     height: 50vh;
     background-color: gray;
+    pointer-events: none;
     z-index: 2;
 }
 #bottomWall{
@@ -41,6 +43,7 @@ canvas{
     width: 50vw;
     height: 15vh;
     background-color: gray;
+    pointer-events: none;
     z-index: 2;
 }
 #leftWall{
@@ -50,6 +53,7 @@ canvas{
     width: 15vw;
     height: 50vh;
     background-color: gray;
+    pointer-events: none;
     z-index: 2;
 }
 #portal1{
@@ -58,6 +62,7 @@ canvas{
     left: calc(7.5% - 7.5px);
     transform: translate(-37.5px, -37.5px);
     pointer-events: none;
+    user-select: none;
     z-index: 2;
 }
 #portal2{
@@ -66,6 +71,7 @@ canvas{
     right: calc(7.5% - 7.5px);
     transform: translate(37.5px, -37.5px);
     pointer-events: none;
+    user-select: none;
     z-index: 2;
 }
 #portal3{
@@ -74,6 +80,7 @@ canvas{
     right: calc(7.5% - 7.5px);
     transform: translate(37.5px, 37.5px);
     pointer-events: none;
+    user-select: none;
     z-index: 2;
 }
 #portal4{
@@ -82,6 +89,7 @@ canvas{
     left: calc(7.5% - 7.5px);
     transform: translate(-37.5px, 37.5px);
     pointer-events: none;
+    user-select: none;
     z-index: 2;
 }
 #highscore{
@@ -95,6 +103,7 @@ canvas{
     font-size: 25px;
     font-weight: 400;
     pointer-events: none;
+    user-select: none;
     z-index: 2;
 }
 #hp, #repulse, #hpText, #repulseText{
